# llm-experiments

./: .gitignore  README.md  pyproject.toml
context_influence/: README.md  analyze.py  data.py  main.py  model_utils.py  plot.py  utils.py
context_influence/results/2026-04-18-20-42-04/: results.json
context_influence/results/2026-04-20-00-27-44/: results.json
context_influence/results/2026-04-20-00-28-08/: results.json
context_influence/results/2026-04-20-00-28-41/: results.json
context_influence/results/2026-04-20-00-29-42/: results.json
context_influence/results/qwen2.5-1.5b-instruct/2026-04-23-18-33/: results.json
context_influence/results/qwen2.5-1.5b-instruct/2026-04-23-18-35/: results.json
context_influence/results/qwen2.5-1.5b-instruct/2026-04-25-21-11/: points.json  results.json
scale_vs_router/: README.md  main.py  plot.py  start.sh  stop.sh
