[project]
name = "llm-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catppuccin>=2.5.0",
    "datasets>=4.8.4",
    "hf-transfer>=0.1.9",
    "matplotlib>=3.10.8",
    "mlx-lm>=0.31.2",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "transformers>=5.5.4",
]
